# pipeline-toolkit

./: .gitmodules  .pylintrc  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: pyler_issue.yaml
.github/workflows/: build.yml  pylint-pytest.yml
tests/: test_simple.py
